# texrs

./: Cargo.toml  README.md
res/: article.tex  book.tex  letter.tex  notes.tex  recipe.tex  refs.bib
src/: build.rs  cli.rs  config.rs  main.rs  new.rs
