[package]
name = "texrs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "wrap_help"] }
colored = "2.0.4"
serde = "1.0.190"
serde_derive = "1.0.190"
terminal-menu = "2.0.6"
toml = "0.8.6"
